--- a/partials/email.html
+++ b/partials/email.html
@@ -19,7 +19,7 @@
                     <!-- Logo -->
                     <tr>
                         <td style="text-align: center;padding-top: 30px;padding-bottom: 30px;border-bottom: 5px solid rgb(8, 235, 204);">
-                            <img src="assets/images/email_temp_header_logo.png" alt="" style="width: 156px;height: 48px;">
+                            <img src="https://finzor.com/assets/images/email_temp_header_logo.png" alt="" style="width: 156px;height: 48px;">
                         </td>
                     </tr>
 
@@ -34,28 +34,28 @@
                     <tr>
                         <td style="text-align: center;">
                             <table role="presentation" width="100%" cellspacing="0" cellpadding="10" border="0"
-                                style="padding: 40px; text-align: left;">
+                                style="padding: 40px; text-align: center;padding-left: 120px;">
                     
-                                <tbody style="font-size: 16px; color: #333;">
+                                <tbody style="font-size: 16px; color: #333;width: 70%;">
                                     <tr>
-                                        <th style="width: 30%;vertical-align: top;"> Name</th>
-                                        <td>[Mr Name]</td>
+                                        <th style="vertical-align: top;text-align: left;width: 40%;"> Name</th>
+                                        <td style="text-align: left;">[Mr Name]</td>
                                     </tr>
                                     <tr>
-                                        <th style="width: 30%;vertical-align: top;">Email Address</th>
-                                        <td>[email@email dot com]</td>
+                                        <th style="vertical-align: top;text-align: left;width: 40%">Email Address</th>
+                                        <td style="text-align: left;">[email@email dot com]</td>
                                     </tr>
                                     <tr>
-                                        <th style="width: 30%;vertical-align: top;"> Contact Number</th>
-                                        <td>[+0123456789]</td>
+                                        <th style="vertical-align: top;text-align: left;width: 40%"> Contact Number</th>
+                                        <td style="text-align: left;">[+0123456789]</td>
                                     </tr>
                                     <tr>
-                                        <th style="width: 30%;vertical-align: top;"> Message</th>
-                                        <td>Hello!!</td>
+                                        <th style="vertical-align: top;text-align: left;width: 40%"> Message</th>
+                                        <td style="text-align: left;">Hello!</td>
                                     </tr>
                                     <tr>
-                                        <th style="width: 30%;vertical-align: top;"> Link</th>
-                                        <td><a href="https://finzor.com/contact-us.php">Contact us</a></td>
+                                        <th style="vertical-align: top;text-align: left;width: 40%">Ref. Link</th>
+                                        <td style="text-align: left"><a href="https://finzor.com/contact-us.php">Contact us</a></td>
                                     </tr>
                                 </tbody>
                             </table>
@@ -67,24 +67,24 @@
                         <td
                             style="padding: 30px; text-align: center; color: white; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px;background-color:#222">
                                 <div style="text-align: center;">
-                                    <img src="assets/images/email_temp_footer_logo.png" alt="" style="width:30px;height:30px;padding-bottom: 30px;">
+                                    <img src="https://finzor.com/assets/images/email_temp_footer_logo.png" alt="" style="width:30px;height:30px;padding-bottom: 30px;">
                                 </div>
 
                             <!-- Social Icons -->
                             
                             <div class="social-links">
                                 <a href="https://www.linkedin.com/company/finzor-official" class="icon" target="_blank" style="text-decoration: none;margin-left: 10px;">
-                                    <img src="assets/images/email_temp_linkedin.png" alt="">
+                                    <img src="https://finzor.com/assets/images/email_temp_linkedin.png" alt="">
                                    </a>
                                 <a href="https://x.com/Finzor_official" class="icon" target="_blank" style="text-decoration: none;margin-left: 10px"> 
-                                    <img src="assets/images/email_temp_twitter_x.png" alt="">
+                                    <img src="https://finzor.com/assets/images/email_temp_twitter_x.png" alt="">
                                 </a>
                                 <a href="https://www.instagram.com/finzor_official/" class="icon" target="_blank" style="text-decoration: none;margin-left: 10px"> 
-                                    <img src="assets/images/email_temp_instagram.png" alt="">
+                                    <img src="https://finzor.com/assets/images/email_temp_instagram.png" alt="">
                                 </a>
                                 <a href="https://www.facebook.com/profile.php?id=61570432987423" class="icon"
                                     target="_blank" style="text-decoration: none;margin-left: 10px">
-                                    <img src="assets/images/email_temp_facebook.png" alt="">
+                                    <img src="https://finzor.com/assets/images/email_temp_facebook.png" alt="">
                                     </a>
                             </div>
 
