email template bottom email removed

--- a/partials/email.html
+++ b/partials/email.html
@@ -88,10 +88,10 @@
                                     </a>
                             </div>
 
-                            <p style="margin-top: 20px; font-size: 12px;color: #a1a3a5;">
+                            <!-- <p style="margin-top: 20px; font-size: 12px;color: #a1a3a5;">
                                 This email was sent to <a href="mailto:praveenkumar@upfinzo.in"
                                     style="color: #a1a3a5; text-decoration: underline;">praveenkumar@upfinzo.in</a>.
-                            </p>
+                            </p> -->
                             <p style="font-size: 12px;">
                                 <a href="#" style="color:#a1a3a5; text-decoration: none;">Privacy Policy</a> |
                                 <a href="#" style="color: #a1a3a5; text-decoration: none;">Terms of Service</a>
