--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -123,7 +123,7 @@
 }
 
 .error {
-  color: red;
+  color: #FF0000;
   font-size: 12px;
   padding: 0px;
   display: inline-block;
@@ -132,5 +132,16 @@
 }
 
 .mandatory {
-  color: red;
+  color: #FF0000;
+}
+
+#signup_btns {
+  display: flex;
+  gap: 10px;
+  justify-content: end;
+}
+@media screen and (max-width: 767px) {
+  #signup_btns #signup_btns {
+    flex-direction: column-reverse;
+  }
 }
