--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -529,3 +529,9 @@
   backdrop-filter: blur(20px);
   background: rgba(13, 116, 101, 0.08);
 }
+
+#subsEmailError {
+  font-size: 11px;
+  color: #FF0000;
+  margin-left: 15px;
+}
