--- a/assets/css/sass/contact_us.scss
+++ b/assets/css/sass/contact_us.scss
@@ -115,3 +115,16 @@
         }
     }
 }
+#subsEmailError{
+    font-size: 11px;
+    color: #FF0000;
+    margin-left: 15px;
+}
+#signup_btns{ 
+    display: flex; 
+    gap: 10px; 
+    justify-content: end; 
+    @media screen and (max-width: 767px) {
+        #signup_btns{ flex-direction: column-reverse; }
+    }
+}
