--- a/assets/css/sass/login.scss
+++ b/assets/css/sass/login.scss
@@ -115,7 +115,7 @@
  
 
 .error {
-    color: red;
+    color: #FF0000;
     font-size: 12px;
     padding: 0px;
     display: inline-block;
@@ -123,8 +123,15 @@
     text-align: left;
 }
 .mandatory {
-    color: red;
+    color: #FF0000;
 }
-
+#signup_btns{ 
+    display: flex; 
+    gap: 10px; 
+    justify-content: end; 
+    @media screen and (max-width: 767px) {
+        #signup_btns{ flex-direction: column-reverse; }
+    }
+}
 
  
