--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -37,6 +37,7 @@ section {
   width: 100%;
   display: flex;
   height: 100%;
+  opacity: 0.7;
 }
 #fz_product_list_hero_sec .product_list_hero {
   display: flex;
