--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -24,6 +24,7 @@ body {
         width: 100%;
         display: flex;
         height: 100%;
+        opacity: 0.7;
     }
     .product_list_hero {
         display: flex;
