smtp to live server

--- a/partials/email-templates/book-demo-email.html
+++ b/partials/email-templates/book-demo-email.html
@@ -92,7 +92,7 @@
                                 <a href="https://finzor.com/terms-and-condition.php" style="color: #a1a3a5; text-decoration: none;">Terms of Service</a>
 
                             </p>
-                            <p style="margin-top: 10px; font-size: 11px;color: #a1a3a5;">Copyright © {{current_year}} Finzor. All
+                            <p style="margin-top: 10px; font-size: 11px;color: #a1a3a5;">Copyright &copy; {{current_year}} Finzor. All
                                 rights reserved</p>
                         </td>
                     </tr>
