--- a/partials/email-templates/contact-us-email.html
+++ b/partials/email-templates/contact-us-email.html
@@ -82,13 +82,13 @@
                                     <img src="https://finzor.com/assets/images/email_temp_facebook.png" alt="">
                                     </a>
                             </div>
-                            
+
                             <p style="font-size: 12px;">
                                 <a href="https://finzor.com/privacy-policy.php" style="color:#a1a3a5; text-decoration: none;">Privacy Policy</a> |
                                 <a href="https://finzor.com/terms-and-condition.php" style="color: #a1a3a5; text-decoration: none;">Terms of Service</a>
 
                             </p>
-                            <p style="margin-top: 10px; font-size: 11px;color: #a1a3a5;">Copyright © {{current_year}} Finzor. All
+                            <p style="margin-top: 10px; font-size: 11px;color: #a1a3a5;">Copyright &copy; {{current_year}} Finzor. All
                                 rights reserved</p>
                         </td>
                     </tr>
