--- a/assets/css/sass/404.scss
+++ b/assets/css/sass/404.scss
@@ -1,43 +1,122 @@
 @import './variable.scss';
-.error-page{
- padding:160px 20px 0px;
+.error-page-section{
+ display: flex;
  text-align: center;
+ justify-content: center;
+ align-items: center;
+ background: url('../images/error-bg-img.svg');
+ background-size: cover;
+ background-repeat: no-repeat;
+background-size: 50%;
+background-position: 100% 30%;
+height:100vh;
 
-h1 {
-    font-size: 120px;
-    font-weight: bold;
-    position: relative;
-    display: inline-block;
-    color: #C3F53C;
-    text-shadow: 0 0 10px rgba(195, 245, 60, 0.8);
-}
-p {
-    font-size: 20px;
-    color: rgb(160, 160, 160);
-    margin: 20px 0;
-}
+@media screen and (max-width: 991px) {
+   background-image: none;
+     }
 
-/* Glitch Effect */
-h1::before, h1::after {
-    content: "404";
+ canvas {
     position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0.8;
+    width: 100%;
+    display: flex;
+    // height: 100%;
 }
-h1::before {
-    color: #ff0000;
-    transform: translateX(-3px);
-    animation: glitch 0.3s infinite alternate;
-}
-h1::after {
-    color: #00ffff;
-    transform: translateX(3px);
-    animation: glitch 0.3s infinite alternate-reverse;
-}
-@keyframes glitch {
-    0% { transform: translateX(3px); }
-    100% { transform: translateX(-3px); }
+//  background: url('../images/error-bg-img.svg');
+//  background-size: cover;
+//  background-repeat: no-repeat;
+// background-size: 50%;
+// background-position: 100% 30%;
+
+.error-page{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    z-index:2;
+    position: relative;
+
+    @media screen and (max-width: 991px) {
+        display: block;
+        }
+
+    .error-left-page{
+
+        img{
+            width:50%;
+            padding-bottom: 24px;
+        }
+        
+        h2{
+            font-size: 44px;
+            line-height: 75px;
+            font-weight: 500;
+            color:#FFFFFF;
+        }
+
+        h3{
+            font-size: 30px;
+            line-height: 45px;
+            font-weight: 300;
+            color:#FFFFFF;
+        }
+        p{
+            font-size: 18px;
+            line-height: 28px;
+            font-weight: 400;
+            color: #A1A1AA;
+
+        }
+        .buttons{
+            width: 188px;
+            margin: 0 auto;
+         border: 1px solid linear-gradient(98.24deg, #6DDCFF 0%, #7F60F9 100%); 
+        }
+    }
+
+    .error-right-page{
+        @media screen and (max-width: 991px) {
+           margin-top: 50px;
+            }
+    svg{
+       
+        // animation: float 3s ease-in-out infinite;
+
+        .star{
+            animation: float 3s ease-in-out infinite;
+        }
+
+        .rotate{
+            animation: float 4s ease-in-out infinite;
+        }
+
+
+    }
+    @keyframes float {
+        0% {
+            transform: translateY(0);
+        }
+        50% {
+            transform: translateY(-10px);
+        }
+        100% {
+            transform: translateY(0);
+        }
+    }
+
+    @keyframes rotate {
+        0% {
+            transform: translate(0, 0);
+            opacity: 0.7;
+        }
+        50% {
+            transform: translate(10px, -10px);
+            opacity: 1;
+        }
+        100% {
+            transform: translate(0, 0);
+            opacity: 0.7;
+        }
+    }
 }
 
+}
 }
