--- a/partials/email-templates/book-demo-email.html
+++ b/partials/email-templates/book-demo-email.html
@@ -89,7 +89,7 @@
                             
                             <p style="font-size: 12px;">
                                 <a href="https://finzor.com/privacy-policy.php" style="color:#a1a3a5; text-decoration: none;">Privacy Policy</a> |
-                                <a href="https://finzor.com/terms-and-condition.php" style="color: #a1a3a5; text-decoration: none;">Terms of Service</a>
+                                <a href="https://finzor.com/terms-and-condition.php" style="color: #a1a3a5; text-decoration: none;">Terms and Condition</a>
 
                             </p>
                             <p style="margin-top: 10px; font-size: 11px;color: #a1a3a5;">Copyright &copy; {{current_year}} Finzor. All
