demo_date time add

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,10 @@ li {
   padding: 0;
 }
 
+.mandatory {
+  color: #FF0000;
+}
+
 @font-face {
   font-family: "Poppins";
   src: url("../..../../assets/font/Poppins-Light.eot");
