--- a/partials/email-templates/book-demo-email.html
+++ b/partials/email-templates/book-demo-email.html
@@ -48,6 +48,10 @@
                                         <td style="text-align: left;">{{phone}}</td>
                                     </tr>
                                     <tr>
+                                        <th style="vertical-align: top;text-align: left;width: 40%"> Exp. Demo Date</th>
+                                        <td style="text-align: left;">{{demo_date_time}}</td>
+                                    </tr>
+                                    <tr>
                                         <th style="vertical-align: top;text-align: left;width: 40%"> Message</th>
                                         <td style="text-align: left;">{{message}}</td>
                                     </tr>
