--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -30,7 +30,6 @@ section {
 }
 #fz_product_list_hero_sec {
   position: relative;
-  padding-bottom: 96px;
 }
 #fz_product_list_hero_sec canvas {
   position: absolute;
@@ -46,6 +45,12 @@ section {
   flex-direction: column;
   position: relative;
   z-index: 9;
+  padding-bottom: 100px;
+}
+@media screen and (max-width: 991px) {
+  #fz_product_list_hero_sec .product_list_hero {
+    padding-bottom: 55px;
+  }
 }
 #fz_product_list_hero_sec .product_list_hero .product_list_hero_title {
   font-size: 64px;
