--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -279,12 +279,13 @@ section {
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img {
   position: absolute;
-  top: 0%;
-  right: 0%;
+  top: 7%;
+  right: 6%;
+  height: 70px;
 }
 @media screen and (max-width: 1199px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img {
-    width: 80px;
+    height: 60px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont h4 {
