--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -220,10 +220,11 @@ body {
                 }
                 img {
                     position: absolute;
-                    top: 0%;
-                    right: 0%;
+                    top: 7%;
+                    right: 6%;
+                    height: 70px;
                     @media screen and (max-width: 1199px) {
-                      width:80px;
+                      height: 60px;
                     }
                 }
 
