button arrow animation

--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -1039,3 +1039,29 @@ body {
   .finbankz_bg_1{
     background: linear-gradient(359.22deg, rgba(0, 17, 21, 0) 2.97%, rgba(4, 46, 39, 0.5) 51.23%) !important;
   }
+  @keyframes slide-right {
+    0% {
+      transform: translateX(135px);
+      opacity: 0.5;
+    }
+    20%{
+      transform: translateX(145px);
+      opacity: 0.5; 
+    }
+    50%{
+      transform: translateX(155px);
+      opacity: 0.1; 
+    }
+    65%{
+      transform: translateX(-125px);
+      opacity: 0.2; 
+    }
+    85%{
+      transform: translateX(110px);
+      opacity: 0.3; 
+    }
+    100% {
+      transform: translateX(130px);
+      opacity:1;
+    }
+  }
