cbs page svg image script added

--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -146,7 +146,7 @@ section {
   left: 10px !important;
 }
 
-#fz_product_list_banner_sec .fz_product_list_banner_img {
+#fz_product_list_banner_sec .fz_product_list_banner_img, #fz_product_list_banner_sec svg {
   width: 100%;
   height: 100%;
 }
@@ -283,14 +283,14 @@ section {
     padding: 72px 48px 40px;
   }
 }
-#fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img {
+#fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img, #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont svg {
   position: absolute;
   top: 7%;
   right: 6%;
   height: 70px;
 }
 @media screen and (max-width: 1199px) {
-  #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img {
+  #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img, #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont svg {
     height: 60px;
   }
 }
@@ -447,7 +447,7 @@ section {
     margin-top: 30px;
   }
 }
-.fz_features_sec .fz_features_img img {
+.fz_features_sec .fz_features_img img, .fz_features_sec .fz_features_img svg {
   width: 100%;
   height: 100%;
 }
@@ -501,12 +501,12 @@ section {
     height: auto;
   }
 }
-.fz_ai_enhance_sec .fz_ai_enhance_img img {
+.fz_ai_enhance_sec .fz_ai_enhance_img img, .fz_ai_enhance_sec .fz_ai_enhance_img svg {
   width: 100%;
   height: 100%;
 }
 @media screen and (min-width: 992px) and (max-width: 1199px) {
-  .fz_ai_enhance_sec .fz_ai_enhance_img img {
+  .fz_ai_enhance_sec .fz_ai_enhance_img img, .fz_ai_enhance_sec .fz_ai_enhance_img svg {
     height: auto;
   }
 }
@@ -598,6 +598,21 @@ section {
   .fz_ai_enhance_sec .fz_ai_enhance_text ul li img {
     width: 20px;
     height: 20px;
+  }
+}
+.fz_ai_enhance_sec .fz_ai_enhance_text ul li::before {
+  content: "";
+  background: url("../../assets/images/Tick mark.svg") center no-repeat;
+  background-size: 18px;
+  width: 18px;
+  height: 18px;
+  object-fit: contain;
+  margin-right: 16px;
+}
+@media screen and (max-width: 1199px) {
+  .fz_ai_enhance_sec .fz_ai_enhance_text ul li::before {
+    width: 44px;
+    height: 44px;
   }
 }
 .fz_ai_enhance_sec .fz_ai_enhance_text ul li p {
@@ -934,6 +949,10 @@ section {
     margin-bottom: 0px;
   }
 }
+#fz_product_range #product-range .fz_product-content svg {
+  width: 94px;
+  margin: 0 auto;
+}
 #fz_product_range #product-range .fz_product-content h3 {
   color: #ffffff;
   font-size: 24px;
@@ -1097,6 +1116,22 @@ section {
 }
 #fz_product_range .owl-carousel .owl-nav .owl-prev svg {
   transform: rotate(180deg);
+}
+#fz_product_range .owl-carousel .owl-item svg.svg-spotlight {
+  transform: scale(1);
+  transition: all ease-in 0.7s;
+}
+#fz_product_range .owl-carousel .owl-item:hover svg.svg-spotlight {
+  transform: scale(1.1);
+  transition: all ease-in 0.7s;
+}
+#fz_product_range svg.svg-spotlight path.svg-light-rays {
+  opacity: 0.2;
+  transition: all ease-in 0.7s;
+}
+#fz_product_range .owl-carousel .owl-item:hover svg.svg-spotlight path.svg-light-rays {
+  opacity: 1;
+  transition: all ease-in 0.7s;
 }
 
 #fin_bankz_sec {
