--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -65,7 +65,7 @@ body {
 
 // Banner section
 #fz_product_list_banner_sec {
-    .fz_product_list_banner_img {
+    .fz_product_list_banner_img, svg {
         width: 100%;
         height: 100%;
     }
@@ -223,7 +223,7 @@ body {
                 @media screen and (max-width: 1199px) {
                   padding: 72px 48px 40px;
                 }
-                img {
+                img, svg {
                     position: absolute;
                     top: 7%;
                     right: 6%;
@@ -374,9 +374,9 @@ body {
          height: auto;
          margin-top: 30px;
          }
-      img{
-          width: 100%;
-          height: 100%;
+      img, svg{
+        width: 100%;
+        height: 100%;
       }
   }
   .fz_tab_images_features{
@@ -423,7 +423,7 @@ body {
         
           }
          
-      img{
+      img, svg{
           width: 100%;
           height: 100%;
           @media screen and (min-width: 992px) and (max-width: 1199px) {
@@ -511,6 +511,20 @@ body {
                   @media screen and (max-width: 1199px) {
                     width:20px;
                     height:20px;
+                  }
+              }
+              &::before {
+                content: '';
+                background: url('../../assets/images/Tick\ mark.svg') center no-repeat;
+                background-size: 18px;
+                width: 18px;
+                  height: 18px;
+                  object-fit: contain;
+                  margin-right: 16px;
+
+                  @media screen and (max-width: 1199px) {
+                    width:44px;
+                    height:44px;
                   }
               }
               p {
@@ -752,6 +766,10 @@ body {
             @media screen and (max-width:1199px) {
               margin-bottom: 0px;
            }
+           svg {
+            width: 94px;
+            margin: 0 auto;
+           }
             h3 {
                 color: $white;
                 font-size: 24px;
@@ -847,7 +865,25 @@ body {
           }
         }
     }
+  .owl-carousel .owl-item svg.svg-spotlight {
+      transform: scale(1);
+      transition: all ease-in 0.7s;
+  }
+  .owl-carousel .owl-item:hover svg.svg-spotlight {
+      transform: scale(1.1);
+      transition: all ease-in 0.7s;
+  }
+  svg.svg-spotlight path.svg-light-rays {
+      opacity: 0.2;
+      transition: all ease-in 0.7s;
+  }
+  
+  .owl-carousel .owl-item:hover svg.svg-spotlight path.svg-light-rays {
+      opacity: 1;
+      transition: all ease-in 0.7s;
+  }
 }
+
 
 // =========finbankz=====page=====styles=======
 #fin_bankz_sec {
