--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1172,6 +1172,7 @@ header .fz_sigin ul .unlock a:hover svg path {
 @media screen and (max-width: 767px) {
   #fz_core_nexus .fz_core_text_right h2 {
     margin-top: 45px;
+    line-height: 36px;
   }
 }
 #fz_core_nexus .fz_core_text_right h5 {
@@ -2242,6 +2243,12 @@ header .fz_sigin ul .unlock a:hover svg path {
   line-height: 30px;
   letter-spacing: 0.25px;
 }
+@media screen and (max-width: 991px) {
+  .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content .fz_bank {
+    margin-top: 10px;
+    line-height: 26px;
+  }
+}
 .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content .fz_desc {
   font-size: 14px;
   font-weight: 300;
@@ -2249,6 +2256,11 @@ header .fz_sigin ul .unlock a:hover svg path {
   padding-bottom: 26px;
   line-height: 26px;
   letter-spacing: 0.25px;
+}
+@media screen and (max-width: 991px) {
+  .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content .fz_desc {
+    line-height: 22px;
+  }
 }
 .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content .buttons {
   width: 168px;
