--- a/assets/css/sass/main.scss
+++ b/assets/css/sass/main.scss
@@ -11,7 +11,7 @@ li {
   padding: 0;
 }
 .mandatory {
-    color: #FF0000;
+    color: #949894;
 }
 @import "./font.scss";
 @import "./header.scss";
