--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -67,6 +67,7 @@
 .footer_section .fz_footer_container .footer-brand p {
   color: #949894;
   font-size: 14px;
+  font-weight: 300;
   width: 315px;
   text-decoration: none;
 }
@@ -75,9 +76,19 @@
     text-align: center;
   }
 }
+@media screen and (max-width: 991px) {
+  .footer_section .fz_footer_container .footer-brand p {
+    margin-bottom: 0;
+  }
+}
 .footer_section .fz_footer_container .social-links {
   display: flex;
   gap: 1.5rem;
+}
+@media screen and (max-width: 991px) {
+  .footer_section .fz_footer_container .social-links {
+    gap: 1rem;
+  }
 }
 .footer_section .fz_footer_container .social-links .icon {
   padding: 4px 10px;
@@ -150,6 +161,7 @@
   color: #949894;
   text-decoration: none;
   font-size: 14px;
+  line-height: 16px;
   font-weight: 400;
   transition: all 0.5s ease;
 }
@@ -254,8 +266,10 @@
 .footer_section .footer-bottom p {
   color: #949894;
   text-align: center;
+  font-size: 14px;
   padding: 10px 0px 50px 0px;
   text-decoration: none;
+  margin: 0;
 }
 
 /* =======scroll====top===== */
