--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,7 +14,7 @@ li {
 }
 
 .mandatory {
-  color: #FF0000;
+  color: #949894;
 }
 
 @font-face {
@@ -4054,6 +4054,7 @@ div#faq-animate svg {
 .footer_section .fz_footer_container .footer-brand p {
   color: #949894;
   font-size: 14px;
+  font-weight: 300;
   width: 315px;
   text-decoration: none;
 }
@@ -4062,9 +4063,19 @@ div#faq-animate svg {
     text-align: center;
   }
 }
+@media screen and (max-width: 991px) {
+  .footer_section .fz_footer_container .footer-brand p {
+    margin-bottom: 0;
+  }
+}
 .footer_section .fz_footer_container .social-links {
   display: flex;
   gap: 1.5rem;
+}
+@media screen and (max-width: 991px) {
+  .footer_section .fz_footer_container .social-links {
+    gap: 1rem;
+  }
 }
 .footer_section .fz_footer_container .social-links .icon {
   padding: 4px 10px;
@@ -4137,6 +4148,7 @@ div#faq-animate svg {
   color: #949894;
   text-decoration: none;
   font-size: 14px;
+  line-height: 16px;
   font-weight: 400;
   transition: all 0.5s ease;
 }
@@ -4241,8 +4253,10 @@ div#faq-animate svg {
 .footer_section .footer-bottom p {
   color: #949894;
   text-align: center;
+  font-size: 14px;
   padding: 10px 0px 50px 0px;
   text-decoration: none;
+  margin: 0;
 }
 
 /* =======scroll====top===== */
