--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -49,7 +49,7 @@ section {
 }
 @media screen and (max-width: 991px) {
   #fz_product_list_hero_sec .product_list_hero {
-    padding-bottom: 55px;
+    padding-bottom: 16px;
   }
 }
 #fz_product_list_hero_sec .product_list_hero .product_list_hero_title {
@@ -63,6 +63,11 @@ section {
 }
 #fz_product_list_hero_sec .product_list_hero .product_list_hero_title span {
   color: #00B2B1;
+}
+@media screen and (max-width: 1199px) {
+  #fz_product_list_hero_sec .product_list_hero .product_list_hero_title {
+    line-height: 82px;
+  }
 }
 @media screen and (max-width: 991px) {
   #fz_product_list_hero_sec .product_list_hero .product_list_hero_title {
@@ -182,7 +187,9 @@ section {
   #fz_product_list_feature .product_list_feature_head h3 {
     font-size: 48px;
     letter-spacing: 0.5px;
-    text-shadow: 0 0 2px rgba(0, 255, 203, 0.52), 0 0 10px rgba(0, 255, 211, 0.51);
+    margin-top: 72px;
+    -webkit-text-stroke: 0.3px #ffffff;
+    text-shadow: 0 0 2px rgba(0, 255, 203, 0.52), 0 0 5px rgba(0, 255, 211, 0.51);
   }
 }
 #fz_product_list_feature .product_list_feature_head h4 {
@@ -229,7 +236,7 @@ section {
 }
 @media screen and (max-width: 991px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card {
-    margin: 30px;
+    margin: 30px 10px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card:nth-child(4) {
@@ -289,7 +296,8 @@ section {
 }
 @media screen and (max-width: 1199px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont {
-    padding: 72px 48px 40px;
+    padding: 20px 30px 20px 20px;
+    border-radius: 8px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img, #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont svg {
@@ -300,7 +308,8 @@ section {
 }
 @media screen and (max-width: 1199px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont img, #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont svg {
-    height: 60px;
+    height: 35px;
+    right: 0%;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont h4 {
@@ -323,13 +332,13 @@ section {
 }
 @media screen and (max-width: 991px) {
   #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont h4 {
-    font-size: 22px;
-    line-height: 28px;
+    font-size: 16px;
+    padding-bottom: 4px;
   }
 }
 #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont p {
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 300;
   line-height: 24px;
   letter-spacing: 0.3000000119px;
   text-align: left;
@@ -342,13 +351,19 @@ section {
     line-height: 20px;
   }
 }
+@media screen and (max-width: 991px) {
+  #fz_product_list_feature .product_list_feature_cards .product_list_feature_card .product_list_feature_cont p {
+    font-size: 14px;
+    line-height: 22px;
+  }
+}
 
 .fz_features_sec {
   padding: 100px 0px;
 }
 @media (max-width: 1024px) {
   .fz_features_sec {
-    padding: 60px 20px;
+    padding: 42px 20px 0px;
   }
 }
 .fz_features_sec h2 {
@@ -359,8 +374,7 @@ section {
 }
 @media (max-width: 991px) {
   .fz_features_sec h2 {
-    text-align: center;
-    font-size: 26px;
+    font-size: 24px;
   }
 }
 .fz_features_sec .fz_features_heading_para {
@@ -371,8 +385,8 @@ section {
 }
 @media (max-width: 991px) {
   .fz_features_sec .fz_features_heading_para {
-    text-align: center;
-    font-size: 16px;
+    font-size: 14px;
+    margin-bottom: 16px;
   }
 }
 .fz_features_sec button {
@@ -397,14 +411,21 @@ section {
 }
 @media (max-width: 991px) {
   .fz_features_sec button .fz_feature_tab_heading {
-    flex-direction: column;
+    gap: 12px;
     align-items: center;
+    margin-bottom: 0px;
   }
 }
 .fz_features_sec button .fz_feature_tab_heading svg {
   width: 30px;
   height: 30px;
   object-fit: contain;
+}
+@media (max-width: 991px) {
+  .fz_features_sec button .fz_feature_tab_heading svg {
+    width: 20px;
+    height: 20px;
+  }
 }
 .fz_features_sec button .fz_feature_tab_heading h4 {
   padding-left: 16px;
@@ -422,6 +443,7 @@ section {
     padding-top: 10px;
     padding-left: 0px;
     font-size: 16px;
+    line-height: 24px;
     font-weight: 500;
   }
 }
@@ -438,16 +460,17 @@ section {
 @media (max-width: 991px) {
   .fz_features_sec button .fz_feature_para {
     font-size: 14px;
+    margin-bottom: 0;
   }
 }
 .fz_features_sec .fz_features_img {
   width: 500px;
-  height: 560px;
+  height: 500px;
 }
 @media (max-width: 1024px) {
   .fz_features_sec .fz_features_img {
     width: 460px;
-    height: 560px;
+    height: 460px;
   }
 }
 @media (max-width: 991px) {
@@ -468,7 +491,7 @@ section {
 }
 @media (max-width: 991px) {
   .fz_features_sec .fz_tab_images_features {
-    justify-content: center;
+    justify-content: start;
   }
 }
 .fz_features_sec .fz_tab_images_features .tab-pane.active {
@@ -488,7 +511,7 @@ section {
 }
 @media (max-width: 1024px) {
   .fz_ai_enhance_sec {
-    padding: 30px 20px 0px;
+    padding: 72px 20px 0px;
   }
 }
 .fz_ai_enhance_sec .col-lg-5 {
@@ -520,14 +543,6 @@ section {
     height: auto;
   }
 }
-@media (max-width: 991px) {
-  .fz_ai_enhance_sec .fz_ai_enhance_text {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-  }
-}
 .fz_ai_enhance_sec .fz_ai_enhance_text h2 {
   color: #ffffff;
   font-size: 48px;
@@ -543,7 +558,6 @@ section {
 }
 @media (max-width: 991px) {
   .fz_ai_enhance_sec .fz_ai_enhance_text h2 {
-    text-align: center;
     font-size: 24px;
     line-height: 34px;
   }
@@ -573,7 +587,6 @@ section {
 }
 @media (max-width: 991px) {
   .fz_ai_enhance_sec .fz_ai_enhance_text .fz_enhance_para {
-    text-align: center;
     font-size: 14px;
     padding-bottom: 10px;
   }
@@ -586,9 +599,7 @@ section {
 }
 @media (max-width: 991px) {
   .fz_ai_enhance_sec .fz_ai_enhance_text ul {
-    margin-bottom: 30px;
-    display: flex;
-    flex-direction: column;
+    margin-bottom: 16px;
   }
 }
 .fz_ai_enhance_sec .fz_ai_enhance_text ul li {
@@ -718,9 +729,9 @@ section {
 @media (max-width: 991px) {
   .fz_get_in_touch .get_in_touch {
     padding: 20px;
-    margin: 60px 0px 0px;
-    border-left: 10px solid #3eab90;
-    border-right: 10px solid #2e5858;
+    margin: 20px 0px 0px;
+    border-left: 5px solid #3eab90;
+    border-right: 5px solid #2e5858;
   }
 }
 .fz_get_in_touch .get_in_touch .get_touch_in_robo_img {
@@ -735,18 +746,18 @@ section {
     z-index: 1;
   }
 }
-.fz_get_in_touch .get_in_touch .get_touch_in_robo_img img {
+.fz_get_in_touch .get_in_touch .get_touch_in_robo_img img, .fz_get_in_touch .get_in_touch .get_touch_in_robo_img svg {
   width: 100%;
   height: 100%;
 }
 @media (max-width: 1199px) {
-  .fz_get_in_touch .get_in_touch .get_touch_in_robo_img img {
+  .fz_get_in_touch .get_in_touch .get_touch_in_robo_img img, .fz_get_in_touch .get_in_touch .get_touch_in_robo_img svg {
     margin-top: 35px;
     width: 80%;
   }
 }
 @media (max-width: 991px) {
-  .fz_get_in_touch .get_in_touch .get_touch_in_robo_img img {
+  .fz_get_in_touch .get_in_touch .get_touch_in_robo_img img, .fz_get_in_touch .get_in_touch .get_touch_in_robo_img svg {
     position: relative;
     z-index: 1;
     left: -20px;
@@ -772,14 +783,19 @@ section {
 }
 @media (max-width: 991px) {
   .fz_get_in_touch .get_in_touch .ripple_effect_robo {
-    top: 51%;
+    top: 48%;
     left: 50%;
   }
 }
-@media (max-width: 430px) {
+@media (max-width: 530px) {
   .fz_get_in_touch .get_in_touch .ripple_effect_robo {
-    top: 36%;
-    left: 55%;
+    top: 40%;
+    left: 44%;
+  }
+}
+@media (max-width: 380px) {
+  .fz_get_in_touch .get_in_touch .ripple_effect_robo {
+    top: 34%;
   }
 }
 @keyframes roboripple {
@@ -807,7 +823,7 @@ section {
   .fz_get_in_touch .get_in_touch .get_touch_in_content h2 {
     text-align: center;
     font-size: 30px;
-    margin-top: 100px;
+    margin-top: 130px;
   }
 }
 .fz_get_in_touch .get_in_touch .get_touch_in_content p {
@@ -934,7 +950,7 @@ section {
 }
 
 #fz_product_range {
-  padding: 100px 0px;
+  padding: 10px 0px 60px;
 }
 #fz_product_range h2 {
   color: #ffffff;
@@ -951,7 +967,8 @@ section {
 @media screen and (max-width: 991px) {
   #fz_product_range h2 {
     font-size: 24px;
-    line-height: 34px;
+    line-height: 32px;
+    padding: 0px 30px;
     text-align: center;
   }
 }
@@ -1000,7 +1017,7 @@ section {
   color: #838383;
   font-size: 16px;
   line-height: 22px;
-  font-weight: 400;
+  font-weight: 300;
   margin: 20px 0;
 }
 @media screen and (max-width: 1199px) {
