--- a/assets/css/sass/login.scss
+++ b/assets/css/sass/login.scss
@@ -56,7 +56,7 @@
    
                            h3{
                                font-size: 30px;
-                               color: #3eab90;
+                               color: #fff;
                                text-align: left;
                            }
                           
@@ -122,9 +122,7 @@
     width: 100%;
     text-align: left;
 }
-.mandatory {
-    color: #FF0000;
-}
+
 #signup_btns{ 
     display: flex; 
     gap: 10px; 
