--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -35,7 +35,7 @@ body {
         z-index: 9;
         padding-bottom: 100px;
         @media screen and (max-width: 991px) {
-         padding-bottom: 55px;
+         padding-bottom: 16px;
         }
         .product_list_hero_title {
             font-size: 64px;
@@ -48,7 +48,9 @@ body {
             span {
                 color: #00B2B1;
             }
-
+            @media screen and (max-width: 1199px) {
+              line-height: 82px;
+            }
             @media screen and (max-width: 991px) {
               padding: 100px 0px 20px 0px;
               line-height: 42px;
@@ -98,8 +100,10 @@ body {
             @media screen and (max-width: 991px) {
               font-size: 48px;
               letter-spacing: 0.5px;
+              margin-top: 72px;
+              -webkit-text-stroke: 0.3px $white;
               text-shadow: 0 0 2px rgba(0, 255, 203, 0.52),
-              0 0 10px rgba(0, 255, 211, 0.51);
+              0 0 5px rgba(0, 255, 211, 0.51);
             }
         }
 
@@ -147,7 +151,7 @@ body {
             padding: 1px;
             overflow: hidden;
             @media screen and (max-width: 991px) {
-              margin: 30px;
+              margin: 30px 10px;
             }
 
             &:nth-child(4) {
@@ -226,7 +230,8 @@ body {
                 background: linear-gradient(216deg, rgba(1, 86, 86, 0.86) 0%, rgba(0, 53, 53, 0.85) 30%, rgb(0 17 17 / 83%) 70%);
                 // background: linear-gradient(0deg, rgb(0, 29, 31) 0%, rgba(0, 23, 21, 0.8) 90%);
                 @media screen and (max-width: 1199px) {
-                  padding: 72px 48px 40px;
+                  padding: 20px 30px 20px 20px;
+                  border-radius: 8px;
                 }
                 img, svg {
                     position: absolute;
@@ -234,7 +239,8 @@ body {
                     right: 6%;
                     height: 70px;
                     @media screen and (max-width: 1199px) {
-                      height: 60px;
+                      height: 35px;
+                      right: 0%;
                     }
                 }
 
@@ -255,14 +261,14 @@ body {
                       line-height: 24px;
                  }
                     @media screen and (max-width: 991px) {
-                      font-size: 22px;
-                      line-height: 28px;
+                      font-size: 16px;
+                      padding-bottom: 4px;
                     }
                 }
 
                 p {
                     font-size: 16px;
-                    font-weight: 400;
+                    font-weight: 300;
                     line-height: 24px;
                     letter-spacing: 0.30000001192092896px;
                     text-align: left;
@@ -274,6 +280,12 @@ body {
                      
                  }
 
+                 @media screen and (max-width: 991px) {
+                  font-size: 14px;
+                  line-height: 22px;
+                  
+                }
+
                 }
             }
         }
@@ -284,7 +296,7 @@ body {
 .fz_features_sec{
   padding: 100px 0px;
   @media (max-width:1024px) {
-      padding: 60px 20px;
+      padding: 42px 20px 0px;
      }
   // @media (max-width: 991px) {
   //    padding: 60px 20px;
@@ -295,8 +307,8 @@ body {
       color: $white;
       margin-bottom: 16px;
       @media (max-width: 991px) {
-          text-align: center;
-          font-size: 26px;
+         
+          font-size: 24px;
          }
   }
   .fz_features_heading_para{
@@ -305,8 +317,8 @@ body {
       color: $white;
       margin-bottom: 45px;
       @media (max-width: 991px) {
-          text-align: center;
-          font-size: 16px;
+          font-size: 14px;
+          margin-bottom: 16px;
          }
   }
   button{
@@ -330,13 +342,19 @@ body {
           align-content: center;
           margin-bottom: 8px;
           @media (max-width: 991px) {
-              flex-direction: column;
+              gap:12px;
               align-items: center;
+              margin-bottom: 0px;
           }
           svg{
               width: 30px;
               height: 30px;
               object-fit: contain;
+
+              @media (max-width: 991px) {
+               width:20px;
+               height: 20px;
+            }
           }
           h4{
               padding-left: 16px;
@@ -350,6 +368,7 @@ body {
                 padding-top: 10px;
                 padding-left: 0px;
                 font-size: 16px;
+                line-height: 24px;
                 font-weight: 500;
               }
           }
@@ -364,15 +383,16 @@ body {
        }
           @media (max-width: 991px) {
               font-size: 14px;
+              margin-bottom: 0;
              }
       }
   }
   .fz_features_img{
       width: 500px;
-      height: 560px;
+      height: 500px;
       @media (max-width: 1024px) {
           width: 460px;
-          height: 560px;
+          height: 460px;
       }
       @media (max-width: 991px) {
          width: auto;
@@ -389,7 +409,7 @@ body {
       justify-content: end;
       align-items: center;
       @media (max-width: 991px) {
-          justify-content: center;
+          justify-content: start;
       }
       .tab-pane.active {
         animation: transformAnimation 2s;
@@ -409,7 +429,7 @@ body {
 .fz_ai_enhance_sec{
   padding: 100px 0px;
   @media (max-width:1024px) {
-      padding: 30px 20px 0px;
+      padding: 72px 20px 0px;
      }
   .col-lg-5 {
     display: flex;
@@ -437,13 +457,7 @@ body {
       }
   }
   .fz_ai_enhance_text{
-    @media (max-width: 991px) {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-direction: column;
-     }
-
+    
       h2{
           color: $white;
           font-size: 48px;
@@ -455,7 +469,7 @@ body {
               margin-bottom: 10px;
          }
           @media (max-width: 991px) {
-               text-align: center;
+              
               font-size: 24px;
               line-height: 34px;
               // padding-bottom: 20px;
@@ -480,7 +494,7 @@ body {
              font-size: 14px;
        }
           @media (max-width: 991px) {
-              text-align: center;
+             
               font-size: 14px;
               padding-bottom: 10px;
           }
@@ -491,9 +505,7 @@ body {
           box-sizing: border-box;
           list-style-type: none;
           @media (max-width: 991px) {
-              margin-bottom: 30px;
-              display: flex;
-              flex-direction: column;
+              margin-bottom: 16px;
           }
           li{
               font-size: 16px;
@@ -613,9 +625,9 @@ body {
       }
       @media (max-width: 991px) {
           padding: 20px;
-          margin: 60px 0px 0px;
-          border-left: 10px solid $primary-color;
-          border-right: 10px solid #2e5858;
+          margin: 20px 0px 0px;
+          border-left: 5px solid $primary-color;
+          border-right: 5px solid #2e5858;
       }
       .get_touch_in_robo_img{
           position: absolute;
@@ -626,7 +638,7 @@ body {
             position: inherit;
             z-index: 1;
           }
-          img{
+          img, svg{
               width: 100%;
               height: 100%;
               @media (max-width: 1199px) {
@@ -662,12 +674,15 @@ body {
           //     left: 31%;
           //   }
           @media (max-width: 991px) {
-              top: 51%;
+              top: 48%;
               left: 50%;
             }
-          @media (max-width: 430px) {
-              top: 36%;
-              left: 55%;
+          @media (max-width: 530px) {
+              top: 40%;
+              left: 44%;
+            }
+            @media (max-width: 380px) {
+              top: 34%;
             }
       }
      
@@ -697,7 +712,7 @@ body {
               @media (max-width: 991px) {
                  text-align: center;
                  font-size: 30px;
-                 margin-top: 100px;
+                 margin-top: 130px;
                 }
           }
           p{
@@ -748,7 +763,7 @@ body {
 
 // Product Range
 #fz_product_range {
-  padding: 100px 0px;
+  padding: 10px 0px 60px;
     h2 {
         color: $white;
         font-size: 48px;
@@ -761,7 +776,8 @@ body {
        }
         @media screen and (max-width:991px) {
             font-size: 24px;
-            line-height: 34px;
+            line-height: 32px;
+            padding:0px 30px;
             text-align: center;
         }
     }
@@ -802,7 +818,7 @@ body {
                 color: #838383;
                 font-size: 16px;
                 line-height: 22px;
-                font-weight: 400;
+                font-weight: 300;
                 margin: 20px 0;
                 @media screen and (max-width:1199px) {
                   font-size: 14px;
